# EchoQuest

./: .env.example  .gitignore  CONTRIBUTING.md  INSTALLATION.md  LICENSE  PROJECT_STRUCTURE.md  README.md  docker-compose.yml
backend/: Dockerfile  add_admin_credits.py  app.db  check_credits.py  check_interview.py  check_users.py  create_tables.py  create_test_user.py  debug_script.py  docker-entrypoint.sh  pyproject.toml  update_test_user.py
backend/app/: __init__.py  main.py  test_assemblyai.py
backend/app/api/: deps.py
backend/app/api/routes/: __init__.py  auth.py  chat.py  credits.py  interviews.py  organizations.py  questionnaires.py  users.py
backend/app/core/: config.py  exceptions.py  logging.py
backend/app/crud/: base.py  crud_chat_session.py  crud_interview.py  crud_organization.py  crud_questionnaire.py  crud_transaction.py  crud_user.py
backend/app/db/: base_class.py  init_db.py  session.py  transaction.py
backend/app/models/: models.py
backend/app/schemas/: base.py  chat.py  credit.py  interview.py  organization.py  questionnaire.py  token.py  transaction.py  user.py
backend/app/services/: ai_service.py  cache_service.py  chat_service.py  email_service.py  file_service.py  openai_service.py  qdrant_service.py  questionnaire_service.py  task_manager.py  token_service.py  transcription_service.py
backend/app/utils/: exceptions.py  pagination.py  rate_limit.py  redis.py  security.py
backend/migrations/versions/: add_chat_sessions.py
backend/src/: database.py  main.py
backend/src/audio_processor/: audio_processing_pipeline.py  audio_processor.py  config.py  exceptions.py
backend/src/audio_processor/processors/: base_processor.py  chunk_processor.py  dynamics_processor.py  multiband_processor.py  noise_processor.py  silence_processor.py  spectral_processor.py
backend/src/audio_transcription/: models.py  processor.py
backend/src/interview_manager/: audio_endpoints.py  models.py  utils.py
backend/src/model_manager/: manager.py  ollama_client.py
backend/src/question_answerer/: prompt_templates.py  question_answerer.py
backend/src/questionnaire_manager/: api.py  config.yaml  crud.py  database.py  llm_question_extractor.py  main.py  models.py  prompt_templates.py  schemas.py
backend/src/transcription/: transcription.py
frontend/: .env.local  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/credits/: page.tsx
frontend/src/app/interviews/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/app/questionnaires/: page.tsx
frontend/src/components/: Dashboard.js  EditQuestionsModal.js  EditableQuestions.js  InterviewCreation.js  InterviewDetail.js  QuestionnaireEditor.js  Sidebar.js  ViewAllInterviews.js  ViewQuestionnaire.js
frontend/src/hooks/: use-auth.ts  use-auth.tsx  use-chat.ts  use-credits.ts  use-interview.ts
frontend/src/lib/: api-client.ts  format.ts  utils.ts
frontend/src/types/: auth.ts  chat.ts  common.ts  index.ts  interview.ts  questionnaire.ts
migrations/versions/: add_chat_sessions.py
(+31 files in other folders)
